--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="offset-md-1 col-md-5">
+    <div class="col-5" style="margin-left:100px">
       <table class="table table-borderless">
         <tr>
           <th>会員ID</th>
