--- a/app/views/admin/devices/edit.html.erb
+++ b/app/views/admin/devices/edit.html.erb
@@ -15,7 +15,7 @@
         </tr>
         <tr>
           <th>デバイス名</th>
-          <td><%= f.text_field :name, placeholder: "デバイス名" %></td>
+          <td><%= f.text_field :name, placeholder: "デバイス名", size: 50 %></td>
         </tr>
         <tr>
           <th>デバイス説明</th>
