--- a/app/views/admin/devices/index.html.erb
+++ b/app/views/admin/devices/index.html.erb
@@ -6,8 +6,8 @@
     <div class="col-auto ml-auto">
       <%= link_to "デバイス新規登録", new_admin_device_path, class: "btn btn-success motion"%>
     </div>
-    <table class="table table-inverse">
-      <thead class="table-color">
+    <table class="table">
+      <thead>
         <tr>
           <th scope="col">デバイスID</th>
           <th scope="col">デバイス名</th>
