--- a/app/views/customer/customers/quit.html.erb
+++ b/app/views/customer/customers/quit.html.erb
@@ -4,7 +4,7 @@
     退会すると当サイトの閲覧ができなくなります。</br>退会する場合は、「退会する」をクリックしてください。
   </P>
   <p class="text-center">
-    <%= link_to "退会しない", customers_mypage_path, class: "btn btn-primary motion" %>
-    <%= link_to "退会する", customers_withdraw_path, method: :patch, class: "btn btn-danger motion" %>
+    <%= link_to "退会しない", customers_mypage_path, class: "btn btn-info motion" %>
+    <%= link_to "退会する", customers_withdraw_path, method: :patch, class: "btn btn-danger motion ml-5" %>
   </p>
 </div>
