--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="offset-md-1 col-md-5">
+    <div class="col-5" style="margin-left:100px">
       <table class="table table-borderless">
         <tr>
           <th>ユーザー名</th>
@@ -26,7 +26,7 @@
           </td>
         </tr>
         <tr>
-          <th><%= link_to "レビュー一覧", customers_review_path, class: "btn btn-success motion" %></th>
+          <th><%= link_to "レビュー一覧", customers_review_path, class: "btn btn-info motion" %></th>
           <td><%= link_to "編集する", customers_mypage_edit_path, class: "btn btn-success motion" %></td>
         </tr>
       </table>
