--- a/app/views/admin/contacts/show.html.erb
+++ b/app/views/admin/contacts/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
-  <div class= "row">
+  <div class="row">
     <div class="col m-3">
       <h3>お問い合わせ詳細</h3>
     </div>
   </div>
   <div class="row">
-    <div class="offset-md-1 col-md-8">
+    <div class="mx-auto">
       <table class="table table-borderless">
         <tr>
           <th>ユーザー名</th>
@@ -17,7 +17,7 @@
         </tr>
         <tr>
           <th>件名</th>
-          <td><%= @contact.title %></td>
+          <td class="text-wrap" style="width: 30rem;"><%= @contact.title %></td>
         </tr>
         <tr>
           <th>お問い合わせ内容</th>
