--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -3,12 +3,12 @@
     <div class="col m-3">
       <h3>会員一覧</h3>
     </div>
-    <table class="table table-inverse">
-      <thead class="table-color">
+    <table class="table">
+      <thead>
         <tr>
           <th scope="col">会員ID</th>
           <th scope="col">ユーザー名</th>
-          <th scope="col">メールアドレス</th>
+          <th scope="col">登録日時</th>
           <th scope="col">ステータス</th>
         </tr>
       </thead>
@@ -17,7 +17,7 @@
           <tr>
             <td><%= customer.id %></td>
             <td><%= link_to customer.name, admin_customer_path(customer), class: "text-info" %></td>
-            <td><%= customer.email %></td>
+            <td><%= customer.created_at.strftime("%Y/%m/%d") %></td>
             <td>
               <% if customer.is_quited == false %>
                 <div class="text-success">有効</div>
