--- a/app/views/admin/reviews/show.html.erb
+++ b/app/views/admin/reviews/show.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
-  <div class= "row mt-3 ml-3">
-    <h3><%= @device.name %>のレビュー</h3>
+  <div class="row">
+    <div class="col m-3">
+      <h3><%= @device.name %>のレビュー</h3>
+    </div>
   </div>
-  <div class="d-flex flex-row">
-    <div>
-      <table class="ml-5 table table-borderless">
+  <div class="row">
+    <div class="mx-auto">
+      <table class="table table-borderless">
         <tr>
           <th>タイトル</th>
           <td><%= @review.title %></td>
