--- a/app/views/customer/customers/edit.html.erb
+++ b/app/views/customer/customers/edit.html.erb
@@ -5,12 +5,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="offset-md-1 col-md-5">
+    <div class="col-8" style="margin-left:100px">
     <%= form_with model:@customer, url: customers_mypage_update_path, local:true do |f|%>
       <table class="table table-borderless">
         <tr>
           <th>ユーザー名</th>
-          <td><%= f.text_field :name %></td>
+          <td><%= f.text_field :name, placeholder: "ユーザー名(15文字以内)" %></td>
         </tr>
         <tr>
           <th>メールアドレス</th>
@@ -30,7 +30,7 @@
           <th></th>
           <td>
             <%= f.submit "変更を保存", class: "btn btn-success motion" %>
-            <%= link_to "退会する", customers_quit_path, class: "btn btn-danger motion" %>
+            <%= link_to "退会する", customers_quit_path, class: "btn btn-danger motion ml-5" %>
           </td>
         </tr>
       </table>
