--- a/app/views/customer/devices/show.html.erb
+++ b/app/views/customer/devices/show.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
-  <div class="d-flex flex-row">
-    <%= attachment_image_tag @device, :image, size: '400x300' %>
-    <div class="ml-5 mt-3">
+  <div class="d-flex flex-wrap justify-content-around">
+    <div>
+      <%= attachment_image_tag @device, :image, size: '400x300' %>
+    </div>
+    <div>
       <h3 class="mt-3 text-wrap" style="width: 30rem;"><strong><%= @device.name %></strong></h3>
       <div class="mt-3 text-wrap" style="width: 30rem;">
         <%= @device.description %><br>
@@ -13,15 +15,18 @@
   </div>
 </div>
 <div class="container">
-  <div class= "row mt-3 ml-3">
-    <h3>レビュー一覧</h3>
-    <div class="col-auto ml-auto">
+  <div class="row">
+    <div class="col m-3">
+      <h3>レビュー一覧</h3>
+    </div>
+    <div class="col-auto ml-auto m-3">
       <%= link_to "レビューを書く", new_device_review_path(@device), class: "btn btn-success motion" %>
     </div>
   </div>
-  <div class="d-flex flex-row mt-3">
+  <div class="d-flex justify-content-around">
     <div class="d-flex flex-column">
-      <h5>平均評価  (評価数:<%= @device.reviews.count %>)</h5>
+      <h5>平均評価</h5>
+      <div>(評価数:<%= @device.reviews.count %>)</div>
       <div class="average-review-rating" data-score=<%= @device.average_rate %>></div>
       <script>
         $('.average-review-rating').empty()
@@ -36,8 +41,8 @@
         });
       </script>
     </div>
-    <table class="ml-5 table table-inverse" style="width: 50rem;">
-      <thead class="table-color">
+    <table class="table" style="width: 50rem;">
+      <thead>
         <tr>
           <th scope="col">タイトル</th>
           <th scope="col">評価</th>
