--- a/app/views/customer/reviews/index.html.erb
+++ b/app/views/customer/reviews/index.html.erb
@@ -3,8 +3,8 @@
     <div class="col m-3">
       <h3>レビュー一覧</h3>
     </div>
-    <table class="table table-inverse">
-      <thead class="table-color">
+    <table class="table">
+      <thead>
         <tr>
           <th scope="col">デバイス名</th>
           <th scope="col">レビュータイトル</th>
