--- a/app/views/customer/reviews/show.html.erb
+++ b/app/views/customer/reviews/show.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
-  <div class= "row mt-3 ml-3">
-    <h3><%= @device.name %>のレビュー</h3>
+  <div class="row">
+    <div class="col m-3">
+      <h3><%= @device.name %>のレビュー</h3>
+    </div>
   </div>
-  <div class="d-flex flex-row">
-    <div>
-      <table class="ml-5 table table-borderless">
+  <div class="row">
+    <div class="mx-auto">
+      <table class="table table-borderless">
         <tr>
           <th>タイトル</th>
           <td><%= @review.title %></td>
@@ -21,8 +23,8 @@
         <tr>
           <th></th>
           <td>
-            <%= link_to "編集する", edit_device_review_path(@review.device.id, @review.id), class: "btn btn-success motion" %>
-            <%= link_to "レビューを削除する", device_review_path(@review.device.id, @review.id), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger motion" %>
+            <%= link_to "レビューを編集する", edit_device_review_path(@review.device.id, @review.id), class: "btn btn-success motion" %>
+            <%= link_to "レビューを削除する", device_review_path(@review.device.id, @review.id), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger motion ml-5" %>
           </td>
         </tr>
         <% end %>
@@ -31,20 +33,20 @@
   </div>
 </div>
 <div class="container">
-  <div class="col-12 clearfix mt-3 ml-3">
-    <div class= "float-left">
+  <div class="row">
+    <div class= "col m-3">
       <h3>コメント一覧</h3>
     </div>
-    <div class="mx-auto" style="width: 200px;">
+    <div class="col-auto ml-auto m-3">
       <%= form_with model: @review_comment, url: device_review_review_comments_path(@review.device.id, @review.id), local: true do |f| %>
         <%= f.text_area :comment %><br>
         <%= f.submit "投稿", class: "btn btn-success motion" %>
       <% end %>
     </div>
   </div>
-  <div class="d-flex flex-row">
-    <div>
-      <table class="ml-5 table table-borderless">
+  <div class="row">
+    <div style="margin-left:100px">
+      <table class="table table-borderless">
         <% @review.review_comments.each do |review_comment| %>
           <tr>
             <th>コメント</th>
@@ -53,7 +55,7 @@
           <% if review_comment.customer == current_customer %>
           <tr>
             <th></th>
-            <td><%= link_to "コメントを削除する", device_review_path(@review.device.id, @review.id), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger motion" %></td>
+            <td><%= link_to "コメントを削除する", device_review_review_comment_path(review_comment.review.device.id, review_comment.review.id, review_comment.id), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger motion" %></td>
           </tr>
           <% end %>
         <% end %>
