--- a/app/views/admin/devices/show.html.erb
+++ b/app/views/admin/devices/show.html.erb
@@ -15,7 +15,7 @@
           <td class="text-wrap" style="width: 30rem;"><%= @device.name %></td>
         <tr>
           <th>商品説明</th>
-          <td class="text-wrap" style="width: 30rem;"><%= @device.description %></td>
+          <td class="text-wrap" style="width: 30rem;"><%= safe_join(@device.description.split("\n"),tag(:br)) %></td>
         </tr>
         <tr>
           <th>カテゴリー</th>
