--- a/app/views/customer/reviews/show.html.erb
+++ b/app/views/customer/reviews/show.html.erb
@@ -34,11 +34,12 @@
 </div>
 <div class="container" style="width: 65rem;">
   <div class="row">
-    <div class= "col m-3">
+    <div class= "col-5 m-3">
       <h3>コメント一覧</h3>
     </div>
-    <div class="col-auto ml-auto m-3">
+    <div class="col ml-auto m-3">
       <%= form_with model: @review_comment, url: device_review_review_comments_path(@review.device.id, @review.id), local: true do |f| %>
+        <div>コメント投稿フォーム</div>
         <%= f.text_area :comment, size: "30x2" %><br>
         <%= f.submit "投稿", class: "btn btn-success motion" %>
       <% end %>
