--- a/app/views/customer/reviews/show.html.erb
+++ b/app/views/customer/reviews/show.html.erb
@@ -32,33 +32,33 @@
     </div>
   </div>
 </div>
-<div class="container" style="width: 65rem;">
+<div class="container" style="width: 50rem;">
   <div class="row">
-    <div class= "col-5 m-3">
+    <div class="mx-auto">
       <h3>コメント一覧</h3>
-    </div>
-    <div class="col ml-auto m-3">
       <%= form_with model: @review_comment, url: device_review_review_comments_path(@review.device.id, @review.id), local: true do |f| %>
         <div>コメント投稿フォーム</div>
-        <%= f.text_area :comment, size: "30x2" %><br>
-        <%= f.submit "投稿", class: "btn btn-success motion" %>
+        <%= f.text_area :comment, size: "100x5" %><br>
+        <div class="text-center">
+          <%= f.submit "投稿する", class: "btn btn-success btn-lg motion" %>
+        </div>
       <% end %>
     </div>
   </div>
   <div class="row">
-    <div style="margin-left:100px">
+    <div class="mx-auto">
       <table class="table table-borderless">
         <% @review.review_comments.each do |review_comment| %>
-          <tr>
-            <th>コメント</th>
-            <td class="text-wrap" style="width: 30rem;"><%= safe_join(review_comment.comment.split("\n"),tag(:br)) %></td>
-          </tr>
-          <% if review_comment.customer == current_customer %>
-          <tr>
-            <th></th>
-            <td><%= link_to "コメントを削除する", device_review_review_comment_path(review_comment.review.device.id, review_comment.review.id, review_comment.id), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger motion" %></td>
-          </tr>
-          <% end %>
+        <tr>
+          <td>投稿日時:<%= review_comment.created_at.strftime("%Y年%m月%d日 %H:%M") %></td>
+        <tr>
+          <th class="text-wrap" style="width: 30rem;"><%= safe_join(review_comment.comment.split("\n"),tag(:br)) %></th>
+          <th>
+            <% if review_comment.customer == current_customer %>
+              <%= link_to "コメント削除", device_review_review_comment_path(review_comment.review.device.id, review_comment.review.id, review_comment.id), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger btn-sm motion" %>
+            <% end %>
+          </th>
+        </tr>
         <% end %>
       </table>
     </div>
