--- a/app/views/admin/contacts/show.html.erb
+++ b/app/views/admin/contacts/show.html.erb
@@ -25,7 +25,7 @@
         </tr>
         <tr>
           <th></th>
-          <td><%= link_to "お問い合わせをを削除する", admin_contact_path(@contact), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger motion" %></td>
+          <td><%= link_to "お問い合わせを削除する", admin_contact_path(@contact), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger motion" %></td>
         </tr>
       </table>
     </div>
